--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,6 @@
 
 browser=chrome
-
+herokuUrl=https://the-internet.herokuapp.com/add_remove_elements/
 amazonUrl=https://www.amazon.com
 wiseUrl=https://www.wisequarter.com
 qdUrl=https://www.qualitydemy.com
