--- a/configuration.properties
+++ b/configuration.properties
@@ -14,3 +14,5 @@ qdGecersizPassword = 12345
 
 amazonAranacakKelime= Nutella
 amazonExpectedIcerik= Nutella
+
+aeUrl= https://automationexercise.com/
