uzun bir aradan sonra

--- a/configuration.properties
+++ b/configuration.properties
@@ -16,3 +16,4 @@ amazonAranacakKelime= Nutella
 amazonExpectedIcerik= Nutella
 
 aeUrl= https://automationexercise.com/
+guruUrl= http://demo.guru99.com/test/web-table-element.php
